--- a/package.json
+++ b/package.json
@@ -1,30 +1,43 @@
 {
-  "name": "training-vue",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "hello-world",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "clean": "rm dist/bundle.js",
-    "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.12",
-    "tailwindcss": "^2.0.3"
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-cli-plugin-tailwind": "^2.0.6"
   },
   "devDependencies": {
-    "webpack": "^5.26.0",
-    "webpack-cli": "^4.5.0",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.12",
-    "babel-loader": "^8.2.2",
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "css-loader": "^5.1.3",
-    "typescript": "^4.2.3",
-    "ts-loader": "^8.0.18"
-  }
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
